[project]
name = "ComfyUI-KGnodes"
description = "NODES:Custom Resolution Latent Node, Style Selector, Rescale Image To Side, Image Overlay, Text Behind Image, Face(s) Detector & Cropper.\n This Custom node pack offers various nodes to make it easier to use ComfyUI."
version = "1.4.0"
license = {file = "LICENSE"}
dependencies = ["pillow", "numpy", "torch", "piexif", "PIL", "cv2"]

[project.urls]
Repository = "https://github.com/shahkoorosh/ComfyUI-KGnodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shahkoorosh"
DisplayName = "ComfyUI-KGnodes"
Icon = "https://github.com/user-attachments/assets/7e9df427-1de9-4d21-87f6-826b0f7d59dd"
